syntax = "proto3";
option go_package = "./auth";

package auth;

service AuthManager {
  rpc SignIn (SignInCredentials) returns (User);
  rpc SignUp (SignUpCredentials) returns (User);
}

message SignInCredentials {
  string email = 1;
  string password = 3;
}

message SignUpCredentials {
  string email = 1;
  string name = 2;
  string password = 3;
  string img_url = 4;
  bool   is_vk_user = 5;
  string phone = 6;
}

message User {
  uint64 id = 1;
  string name = 2;
  string phone = 3;
  string email = 4;
  string address = 5;
  string img_url = 6;
  string card_number = 7;
  string password = 8;
  bool   is_vk_user = 9;
}